# alcura-diabetes-obesity-disease-mgmt

./: .editorconfig  .gitignore  README.md  pyproject.toml
alcura_diabetes_obesity_disease_mgmt/: hooks.py  patches.txt
alcura_diabetes_obesity_disease_mgmt/adapters/: __init__.py  appointment_adapter.py  base.py  encounter_adapter.py  lab_adapter.py  medication_adapter.py  patient_adapter.py  practitioner_adapter.py  vitals_adapter.py
alcura_diabetes_obesity_disease_mgmt/api/: __init__.py  care_plan.py  encounter_context.py  enrollment.py  monitoring.py  portal.py
alcura_diabetes_obesity_disease_mgmt/config/: desktop.py
alcura_diabetes_obesity_disease_mgmt/constants/: __init__.py  clinical.py  roles.py  statuses.py
alcura_diabetes_obesity_disease_mgmt/permissions/: audit.py  cdm_permissions.py  role_matrix.py
alcura_diabetes_obesity_disease_mgmt/services/: alert.py  baseline.py  care_plan.py  correlation.py  dashboard.py  diabetes.py  encounter_context.py  enrollment.py  lifestyle.py  medication.py  medication_timeline.py  obesity.py  portal.py  protocol.py  review.py  summary.py
alcura_diabetes_obesity_disease_mgmt/setup/: custom_fields.py  demo_data.py  install.py  roles.py
alcura_diabetes_obesity_disease_mgmt/tests/: conftest.py  test_alert_service.py  test_baseline.py  test_care_plan.py  test_constants.py  test_coordinator_service.py  test_dashboard_service.py  test_date_utils.py  test_diabetes_service.py  test_disease_goal.py  test_document_helpers.py  test_install.py  (+15 more)
chronic_disease_management/: hooks.py  modules.txt  patches.txt
docs/: README.md
(+255 files in other folders)
